# comprehensive

./: .gitignore  README.md
C++/: need_code_again.md
C++/Linux/communicate/: .gitignore  Makefile  Makefile.am  channel.h  client.cpp  communicate_loop.cpp  communicate_loop.h  configure.in  cthread.cpp  cthread.h  cthread_mutex.cpp  cthread_mutex.h  end_point.h  event_poller.h  listen_handler.cpp  listen_handler.h  listen_socket_context.cpp  listen_socket_context.h  main.cpp  net_handler.h  net_machine.cpp  net_machine.h  packet.h  server.cpp  simple_list.h  singleton.h  socket_context.cpp  socket_context.h  stream_handler.h  stream_socket_context.cpp  stream_socket_context.h  task_queue.h
C++/Linux/pipe/: anonymous_pipe_usage.cpp  make  stdio.php
C++/Linux/signal/: sig.cpp
C++/Linux/system_func/: memcopy.cpp  memcopy.md
C++/Linux/taskqueue/: Makefile  main.cpp  taskqueue.cpp  taskqueue.h
C++/Linux/thread/: Cthread.cpp  Cthread.h  Makefile  README.md  Work_flow.cpp  Work_flow.h  main.cpp  process.cpp  process.h
C++/Longest_substr/: Max_substr.cpp  README.md
C++/Sort_List/: list_sort.cpp
C++/algorithm/Binary_Tree_Inorder_Traversal/: solution2.cpp
C++/algorithm/Binary_Tree_Postorder_Traversal/: solution.cpp
C++/algorithm/Climbing_Stairs/: README.md
C++/algorithm/Container_With_Most_Water/: README.md
C++/algorithm/LRU_Cache/: README.md
C++/algorithm/Length_of_Last_Word/: solution.cpp
C++/algorithm/Longest_Common_Prefix/: README.md
C++/algorithm/Longest_Substring_Without_Repeating_Characters/: README.md  solution.cpp
C++/algorithm/Longest_increased_array/: README.md  solution.cpp  solution1.cpp
C++/algorithm/Palindrome_Number/: solution.cpp
C++/algorithm/Pascal's_Triangle_II/: README.md
C++/algorithm/Permutations/: solution.cpp
C++/algorithm/Populating_Next_Right_Pointers_in_Each_Node/: README.md
C++/algorithm/Pow(x,n)/: solution.cpp
C++/auto_ptr/: Makefile  auto_ptr.hpp  main.cpp
C++/sfs/: .gitignore  Makefile.am  Makefile.in  README  a.out  clean_make  client.cpp  client.h  common.h  configure.in  design  file_utils.cpp  file_utils.h  main.cpp  meta_storage.idx  read.cpp
C++/sfs/test/: main.bak
erlang/: README.md  list_append_demo.erl  record_demo.erl
erlang/behaviour/: Makefile  README.md  commom.hrl  demo_gen_event_event1.erl  demo_gen_event_event2.erl  demo_gen_server.erl  demo_gen_server_cache.erl  demo_supervisor.erl  demo_supervisor_call.erl  gen_event.md  make
erlang/concurrent/: README.md  demo_spawn.erl
erlang/mixed/: io_format_demo.erl  mv.erl
java/spring_test/: .gitignore  build.gradle
(+223 files in other folders)
