AUTOMAKE_OPTIONS= foreign

bin_PROGRAMS= main client server

main_SOURCES= main.cpp packet.h net_machine.h net_machine.cpp stream_socket_context.h stream_socket_context.cpp cthread_mutex.h cthread_mutex.cpp communicate_loop.h communicate_loop.cpp cthread.h cthread.cpp listen_socket_context.h listen_socket_context.cpp socket_context.h socket_context.cpp listen_handler.h listen_handler.cpp
client_SOURCES= client.cpp packet.h net_machine.h net_machine.cpp stream_socket_context.h stream_socket_context.cpp cthread_mutex.h cthread_mutex.cpp communicate_loop.h communicate_loop.cpp cthread.h cthread.cpp listen_socket_context.h listen_socket_context.cpp socket_context.h socket_context.cpp listen_handler.h listen_handler.cpp
server_SOURCES= server.cpp packet.h net_machine.h net_machine.cpp stream_socket_context.h stream_socket_context.cpp cthread_mutex.h cthread_mutex.cpp communicate_loop.h communicate_loop.cpp cthread.h cthread.cpp listen_socket_context.h listen_socket_context.cpp socket_context.h socket_context.cpp listen_handler.h listen_handler.cpp
